--- a/.gitignore
+++ b/.gitignore
@@ -1,95 +1,52 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+# Dependencies
+node_modules/
+backend/venv/
+backend/env/
 
-# Django
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-media/
-staticfiles/
+# Production builds
+frontend/dist/
+frontend/build/
 
 # Environment variables
 .env
 .env.local
 .env.production
+.env.development
 
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Database
+*.sqlite3
+*.db
 
-# React build
-frontend/dist/
-frontend/build/
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+
+# ML Models and Data
+backend/trained_models/
+backend/uploaded_datasets/
+backend/cleaned_datasets/
+backend/dataset_metadata/
+
+# Logs
+*.log
+logs/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# AWS
-.aws/
-*.pem
+# Jupyter Notebook
+.ipynb_checkpoints/
 
-# ML Models (large files)
-*.pkl
-*.joblib
-models/
-
-# Logs
-*.log
-logs/
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Cache
-.cache/
-.pytest_cache/
-
-# Coverage
-htmlcov/
-.coverage
-.coverage.*
-coverage.xml
-
-# Virtual environments
-venv/
-env/
-ENV/
-.venv/
+# Package files
+*.tgz
+*.tar.gz
