--- a/backend/requirements_simple.txt
+++ b/backend/requirements_simple.txt
@@ -6,3 +6,10 @@ scikit-learn==1.3.2
 pandas==2.1.4
 joblib==1.3.2
 Pillow==10.1.0
+channels==4.0.0
+channels-redis==4.1.0
+redis==5.0.1
+celery==5.3.4
+boto3==1.34.0
+prometheus-client==0.19.0
+sentry-sdk==1.38.0
