--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,32 +8,39 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.0",
+    "@react-three/fiber": "^8.15.0",
+    "@tanstack/react-table": "^8.10.7",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "d3": "^7.9.0",
+    "framer-motion": "^10.16.5",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.263.1",
+    "papaparse": "^5.4.1",
+    "plotly.js": "^3.3.1",
+    "plotly.js-dist-min": "^3.3.1",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "tailwindcss": "^3.3.6",
-    "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16",
-    "framer-motion": "^10.16.5",
-    "recharts": "^2.8.0",
-    "zustand": "^4.4.7",
-    "axios": "^1.6.2",
-    "react-hot-toast": "^2.4.1",
     "react-dropzone": "^14.2.3",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.294.0",
-    "react-window": "^1.8.8",
-    "@tanstack/react-table": "^8.10.7",
-    "papaparse": "^5.4.1",
-    "jspdf": "^2.5.1",
-    "zod": "^3.22.4",
     "react-hook-form": "^7.48.2",
-    "@aws-amplify/ui-react": "^6.0.7"
+    "react-hot-toast": "^2.4.1",
+    "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^6.20.0",
+    "react-window": "^1.8.8",
+    "recharts": "^2.5.0",
+    "tailwindcss": "^3.3.6",
+    "three": "^0.158.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
@@ -41,9 +48,27 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "vite": "^5.0.0",
     "jest": "^29.7.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.5"
+    "playwright": "^1.40.0",
+    "vite": "^5.0.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/main.jsx",
+      "!src/setupTests.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
